# SpruceUp

./: .gitignore  CLAUDE.md  Coordinator.py  Embedding.py  LICENSE  Notes.md  README.md  SYNC_ENGINE_CONTRACT.md  coordinator.py  db.py  define_config.md  embedding.py  hashing.py  main.py  models.py  pypi-instructions.md  pyproject.toml  registry.py  spruceup_pipeline.py  tenacity_test.py  user_pipeline_changes.md
example/: dummy_pipeline.py  spruceup_pipeline.py
example/data_corpus/: TEST_SLIDE_DECK.txt  file_0000000.txt  file_0000001.txt  file_0000002.txt  file_0000003.txt  file_0000004.txt  file_0000005.txt  file_0000006.txt  file_0000007.txt  file_0000008.txt  file_0000009.txt  file_0000010.txt  file_0000011.txt  file_0000012.txt  file_0000013.txt  file_0000014.txt  file_0000015.txt  file_0000016.txt  file_0000017.txt  file_0000018.txt  file_0000019.txt  file_0000020.txt  file_0000021.txt  file_0000022.txt  file_0000023.txt  file_0000024.txt  file_0000025.txt  file_0000026.txt  file_0000027.txt  file_0000028.txt  file_0000029.txt  file_0000030.txt  file_0000031.txt  file_0000032.txt  file_0000033.txt  file_0000034.txt  file_0000035.txt  file_0000036.txt  file_0000037.txt  file_0000038.txt  (+61 more)
monitoring/: capture.py  data_retriever.py  db.py  monitor.py  tasks.py
spruceup/: __init__.py  app.py  cli.py  config.py  coordinator.py  db.py  debounce_queue.py  embedding.py  manifest.py  models.py  pipeline_validator.py  registry.py  sync_sweeper.py  sync_validator.py  validation.py
spruceup/connectors/: __init__.py  base.py
spruceup/connectors/embedders/: __init__.py  caching.py  coalescing.py  cohere.py  context.py  embedding_batcher.py  gemini.py  openai.py  voyageai.py
spruceup/connectors/sources/: __init__.py  google_drive.py  local.py
spruceup/connectors/targets/: __init__.py  pgvector.py  pinecone.py  weaviate.py
spruceup/memoize/: context.py  decorator.py  serialization.py
spruceup/monitoring/: capture.py  google_drive_watcher.py  local_file_watcher.py  monitor.py  tasks.py
spruceup/sync_engine/: __init__.py  manifest.py  sync_engine.py  target_db.py
spruceup/sync_engine/target_connectors/: base.py  pgvector.py
spruceup/utils/: __init__.py  hashing.py  validation.py
src/spruceup/: __init__.py  app.py  cli.py  config.py  coordinator.py  debounce_queue.py  manifest.py  models.py  sync_sweeper.py  transform_context.py
src/spruceup/connectors/: __init__.py  base.py
src/spruceup/connectors/embedders/: cohere.py  embedding_batcher.py  gemini.py  openai.py  voyageai.py
src/spruceup/connectors/sources/: google_drive.py  local.py
src/spruceup/connectors/targets/: __init__.py  pgvector.py  pinecone.py  weaviate.py
src/spruceup/memoize/: decorator.py  decorator_utility.py
src/spruceup/monitoring/: google_drive_watcher.py  local_file_watcher.py  monitor.py
src/spruceup/sync_engine/: sync_engine.py
src/spruceup/utils/: __init__.py  hashing.py  schema.py  validation.py
sync_engine/: SYNC_ENGINE_CONTRACT.md  __init__.py  demo.py  hashing.py  manifest.py  models.py  sync_engine.py  target_db.py
sync_engine/sync_engine/: __init__.py  manifest.py  models.py  sync_engine.py  target_db.py
sync_engine/tests/: test_sync_engine.py
tests/: conftest.py  fakes.py  test_app.py  test_coalescing_embedder.py  test_config.py  test_coordinator.py  test_embedders.py  test_embedding_batcher.py  test_embedding_cache.py  test_google_drive_source.py  test_google_drive_watcher.py  test_hashing.py  test_local_file_watcher.py  test_local_files_source.py  test_memoize.py  test_monitor_retry.py  test_sync_engine.py  test_sync_sweeper.py  test_validation.py
tests/loadtest/: bench_embed.py  gen_corpus.py  reset.py  run_ingest.py  stubs.py
