[project]
name = "spruceup"
version = "0.1.0"
description = ""
authors = [
    {name = "Caleb P"}
]
requires-python = ">=3.14,<3.15"
dependencies = [
    "psycopg (>=3.3.4,<4.0.0)",
    "tenacity (>=9.1.4,<10.0.0)",
    "openai (>=2.37.0,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "watchfiles (>=1.0.0)",
    "pinecone (>=3.0.0)",
    "voyageai @ git+https://github.com/voyage-ai/voyageai-python.git@86422e15dab9ce512437b90594e8b26d20bbf259",
    "cohere (>=7.0.0,<8.0.0)",
    "google-genai (>=2.6.0,<3.0.0)",
    "weaviate-client (>=4.0.0,<5.0.0)",
    "google-api-python-client (>=2.197.0,<3.0.0)",
    "google-auth (>=2.53.0,<3.0.0)"
]

[project.scripts]
spruceup = "spruceup.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "cohere (>=7.0.0,<8.0.0)"
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.pyright]
pythonVersion = "3.14"
extraPaths = ["."]
