[project]
name = "spruceup"
version = "0.1.0"
description = "A standalone system for making automated, incremental updates to a vector database."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Ekerin Agboola"},
    {name = "Eric Cho"},
    {name = "AJ Fuhler"},
    {name = "Caleb Pickard"},
]
requires-python = ">=3.12,<3.15"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "psycopg (>=3.3.4,<4.0.0)",
    "psycopg-pool (>=3.0.0,<4.0.0)",
    "tenacity (>=9.1.4,<10.0.0)",
    "openai (>=2.37.0,<3.0.0)",
    "watchfiles (>=1.0.0)",
    "pinecone (>=3.0.0)",
    "voyageai (>=0.4.0,<0.5.0)",
    "cohere (>=7.0.0,<8.0.0)",
    "google-genai (>=2.6.0,<3.0.0)",
    "weaviate-client (>=4.0.0,<5.0.0)",
    "google-api-python-client (>=2.197.0,<3.0.0)",
    "google-auth (>=2.53.0,<3.0.0)"
]

[project.urls]
Repository = "https://github.com/SpruceUp-ai/SpruceUp"

[project.scripts]
spruceup = "spruceup.cli:main"

[tool.poetry]
packages = [{ include = "spruceup", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.12"
extraPaths = ["src"]
typeCheckingMode = "standard"
